This is a record of changes to SerialEM since it was first publicly released.

* marks changes or enhancements noticeable to the user, or items of particular
significance, for the stable release version
============================================================================
2/22/21: Fixed using OneView with drift correction and float images (In 3.8).

2/18/21: Assigned the current stage backlash, if any, to an image shift
montage so that a map made from it would have backlash (In 3.8).

2/16/21: Added script command to report the number of holes and Navigator
points that would be acquired by MultipleRecords using only points that 
include a specified minimum number of holes.  ReportNavItem also sets a
variable for the number of holes that would be acquired for one item.

2/16/21: Made excluded points in the hole finder be colored light or dark blue
depending on which mean cutoff they exceeded.

2/11/21: SEM_3-9-0beta4
2/11/21: Updated Microsoft DLL's on nightly build machine and discarded beta2
and beta3 packages built there because plugins would not load on Windows 10.

2/9/21: Added script commands to change frame and exposure times together by a
factor, and to adjust dose outputs in the .mdoc file.

2/7/21: Fixed saving of non-square images, broken 1/30.

2/6/21: Added script command to do File - Open Old, made some commands able to
work on a buffer in the FFT window, and added command to test if that is open.

2/4/21: Fixed losing names in Script-Run menu if Script-Verbose is hidden.

1/30/21: Added support for Falcon 4.

1/27/21: Fixed Extra Division by 2 being enabled for FEI cameras (In 3.8).

1/15/21: Use Trial Size for image/stage shift calibrations will also use the
current Trial subarea offset from center as well (In 3.8).

* 1/15/21: Revised instructions to say that FrameGPU and new CUDA dll's should
unpack to Shrmemframe, and made the installer move the dll's from Plugins to